projects/vb6parse/snapshots/parsers/cst/library/file/filelen/filelen_array_assignment.snap
---
source: projects/vb6parse/tests/library/file/filelen.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: files
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: count
                - kind: RightParenthesis
                  text: )
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: Size
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FileLen
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: fullPath
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
