projects/vb6parse/snapshots/parsers/cst/library/file/filelen/filelen_multiline.snap
---
source: projects/vb6parse/tests/library/file/filelen.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: info
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BinaryExpression
              children:
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: StringLiteralExpression
                                          children:
                                            - kind: StringLiteral
                                              text: "\"File: \""
                                        - kind: Whitespace
                                          text: " "
                                        - kind: Ampersand
                                          text: "&"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: fileName
                                    - kind: Whitespace
                                      text: " "
                                    - kind: Ampersand
                                      text: "&"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: vbCrLf
                                - kind: Whitespace
                                  text: " "
                                - kind: Ampersand
                                  text: "&"
                                - kind: Whitespace
                                  text: " "
                                - kind: Underscore
                                  text: _
                                - kind: Newline
                                  text: "\n"
                                - kind: Whitespace
                                  text: "       "
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"Size: \""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: FileLen
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: fullPath
                                - kind: RightParenthesis
                                  text: )
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\" bytes\""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: vbCrLf
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: Underscore
                  text: _
                - kind: Newline
                  text: "\n"
                - kind: Whitespace
                  text: "       "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Size (MB): \""
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Format
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: FileLen
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: fullPath
                                - kind: RightParenthesis
                                  text: )
                            - kind: Whitespace
                              text: " "
                            - kind: DivisionOperator
                              text: /
                            - kind: Whitespace
                              text: " "
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1048576"
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"0.00\""
                - kind: RightParenthesis
                  text: )
        - kind: Newline
          text: "\n"
